--- a/index.org
+++ b/index.org
@@ -29,6 +29,11 @@
 [[./2024/2024-Rd04-Japanese-Grand-Prix-Qualifying_laptime.csv][QF: laptime csv]]
 [[./2024/2024-Rd04-Japanese-Grand-Prix-Qualifying_rcm.csv][QF: race control message csv]]
 
+[[./2024/2024-Rd04-Japanese-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2024/2024-Rd04-Japanese-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2024/2024-Rd04-Japanese-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2024/2024-Rd04-Japanese-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+
 ** Rd03 Australian Grand Prix
 
 [[./2024/2024-Rd03-Australian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
