Add 2024 Rd05 Chinese GP Q

--- a/index.org
+++ b/index.org
@@ -27,6 +27,10 @@
 [[./2024/2024-Rd05-Chinese-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
 [[./2024/2024-Rd05-Chinese-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
 
+[[./2024/2024-Rd05-Chinese-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2024/2024-Rd05-Chinese-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2024/2024-Rd05-Chinese-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd04 Japanese Grand Prix
 
 [[./2024/2024-Rd04-Japanese-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
