--- a/index.org
+++ b/index.org
@@ -20,6 +20,11 @@
 [[./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
 [[./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
+[[./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
 ** Rd06 Miami Grand Prix
 [[./2024/2024-Rd06-Miami-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2024/2024-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
