--- a/index.org
+++ b/index.org
@@ -12,6 +12,11 @@
 * 2024 season
 
 
+** Rd08 Monaco Grand Prix
+[[./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
 ** Rd07 Emilia Romagna Grand Prix
 [[./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
