--- a/index.org
+++ b/index.org
@@ -12,6 +12,16 @@
 * 2024 season
 
 
+** Rd09 Canadian Grand Prix
+
+[[./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
+[[./2024/2024-Rd09-Canadian-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2024/2024-Rd09-Canadian-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2024/2024-Rd09-Canadian-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Rd08 Monaco Grand Prix
 [[./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
