--- a/index.org
+++ b/index.org
@@ -22,6 +22,10 @@
 [[./2024/2024-Rd10-Spanish-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2024/2024-Rd10-Spanish-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2024/2024-Rd10-Spanish-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2024/2024-Rd10-Spanish-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+[[./2024/2024-Rd10-Spanish-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+
 ** Rd09 Canadian Grand Prix
 
 [[./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
