Add 2024 Rd10 Spanish GP Race

--- a/index.org
+++ b/index.org
@@ -30,6 +30,11 @@
 [[./2024/2024-Rd10-Spanish-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
 [[./2024/2024-Rd10-Spanish-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
 
+[[./2024/2024-Rd10-Spanish-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2024/2024-Rd10-Spanish-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2024/2024-Rd10-Spanish-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2024/2024-Rd10-Spanish-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+
 ** Rd09 Canadian Grand Prix
 
 [[./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
