--- a/index.org
+++ b/index.org
@@ -27,6 +27,10 @@
 [[./2024/2024-Rd11-Austrian-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
 [[./2024/2024-Rd11-Austrian-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
 
+[[./2024/2024-Rd11-Austrian-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2024/2024-Rd11-Austrian-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2024/2024-Rd11-Austrian-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd10 Spanish Grand Prix
 
 [[./2024/2024-Rd10-Spanish-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
