--- a/index.org
+++ b/index.org
@@ -31,6 +31,11 @@
 [[./2024/2024-Rd11-Austrian-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
 [[./2024/2024-Rd11-Austrian-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
 
+[[./2024/2024-Rd11-Austrian-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2024/2024-Rd11-Austrian-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2024/2024-Rd11-Austrian-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2024/2024-Rd11-Austrian-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+
 ** Rd10 Spanish Grand Prix
 
 [[./2024/2024-Rd10-Spanish-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
