--- a/index.org
+++ b/index.org
@@ -11,6 +11,12 @@
 
 * 2024 season
 
+** Rd14 Belgian Grand Prix
+
+[[./2024/2024-Rd14-Belgian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2024/2024-Rd14-Belgian-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2024/2024-Rd14-Belgian-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
 ** Rd13 Hungarian Grand Prix
 
 [[./2024/2024-Rd13-Hungarian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
