Add 2024 Rd16 Italian GP FP1

--- a/index.org
+++ b/index.org
@@ -11,6 +11,12 @@
 
 * 2024 season
 
+** Rd16 Italian Grand Prix
+
+[[./2024/2024-Rd16-Italian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2024/2024-Rd16-Italian-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2024/2024-Rd16-Italian-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
 ** Rd15 Dutch Grand Prix
 
 [[./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
