Add 2024 Rd16 Italian GP FP3

--- a/index.org
+++ b/index.org
@@ -21,6 +21,10 @@
 [[./2024/2024-Rd16-Italian-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2024/2024-Rd16-Italian-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2024/2024-Rd16-Italian-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2024/2024-Rd16-Italian-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2024/2024-Rd16-Italian-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
 ** Rd15 Dutch Grand Prix
 
 [[./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
