--- a/index.org
+++ b/index.org
@@ -11,6 +11,15 @@
 
 * 2024 season
 
+** Rd20 Mexico City Grand Prix
+[[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
+[[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Rd19 United State Grand Prix
 
 [[./2024/2024-Rd19-United-States-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
