--- a/index.org
+++ b/index.org
@@ -21,6 +21,11 @@
 [[./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint-Qualifying_laptime.csv][SQ: laptime csv]]
 [[./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint-Qualifying_rcm.csv][SQ: race control message csv]]
 
+[[./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint.pdf][S:Plots PDF]]
+[[./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
+[[./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
+[[./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
+
 ** Rd20 Mexico City Grand Prix
 [[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
