--- a/index.org
+++ b/index.org
@@ -26,6 +26,11 @@
 [[./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
 [[./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
 
+[[./2024/2024-Rd21-São-Paulo-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2024/2024-Rd21-São-Paulo-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2024/2024-Rd21-São-Paulo-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2024/2024-Rd21-São-Paulo-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+
 ** Rd20 Mexico City Grand Prix
 [[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
