--- a/index.org
+++ b/index.org
@@ -20,6 +20,10 @@
 [[./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
 ** Rd21 Sao Paulo Grand Prix
 
 [[./2024/2024-Rd21-São-Paulo-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
