Add 2024 Rd23 Qatar GP SQ

--- a/index.org
+++ b/index.org
@@ -17,6 +17,10 @@
 [[./2024/2024-Rd23-Qatar-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
 [[./2024/2024-Rd23-Qatar-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
 
+[[./2024/2024-Rd23-Qatar-Grand-Prix-Sprint-Qualifying.pdf][SQ: Plot PDF]]
+[[./2024/2024-Rd23-Qatar-Grand-Prix-Sprint-Qualifying_laptime.csv][SQ: laptime csv]]
+[[./2024/2024-Rd23-Qatar-Grand-Prix-Sprint-Qualifying_rcm.csv][SQ: race control message csv]]
+
 ** Rd22 Las Vegas Grand Prix
 [[./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
