Add 2025 Presason-Test Day3

--- a/index.org
+++ b/index.org
@@ -21,6 +21,10 @@
 [[./2025/2025-Pre-Season-Testing-1-2_laptime.csv][Day2:laptime csv]]
 [[./2025/2025-Pre-Season-Testing-1-2_rcm.csv][Day2:race control message csv]]
 
+[[./2025/2025-Pre-Season-Testing-1-3.pdf][Day3:Plot PDF]]
+[[./2025/2025-Pre-Season-Testing-1-3_laptime.csv][Day3:laptime csv]]
+[[./2025/2025-Pre-Season-Testing-1-3_rcm.csv][Day3:race control message csv]]
+
 * 2024 season
 
 ** Rd24 Abu Dhabi Grand Prix
