--- a/index.org
+++ b/index.org
@@ -16,6 +16,10 @@
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
 
+[[./2025/2025-Rd01-Australian-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2025/2025-Rd01-Australian-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2025/2025-Rd01-Australian-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Pre-season test
 
 [[./2025/2025-Pre-Season-Testing-1-1.pdf][Day1:Plot PDF]]
