--- a/index.org
+++ b/index.org
@@ -20,6 +20,10 @@
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2025/2025-Rd01-Australian-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2025/2025-Rd01-Australian-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2025/2025-Rd01-Australian-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
 ** Pre-season test
 
 [[./2025/2025-Pre-Season-Testing-1-1.pdf][Day1:Plot PDF]]
