Add 2025 Rd01 Australian GP QF

--- a/index.org
+++ b/index.org
@@ -24,6 +24,10 @@
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
 
+[[./2025/2025-Rd01-Australian-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd01-Australian-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd01-Australian-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Pre-season test
 
 [[./2025/2025-Pre-Season-Testing-1-1.pdf][Day1:Plot PDF]]
