--- a/index.org
+++ b/index.org
@@ -20,6 +20,11 @@
 [[./2025/2025-Rd02-Chinese-Grand-Prix-Sprint-Qualifying_laptime.csv][SQ: laptime csv]]
 [[./2025/2025-Rd02-Chinese-Grand-Prix-Sprint-Qualifying_rcm.csv][SQ: race control message csv]]
 
+[[./2025/2025-Rd02-Chinese-Grand-Prix-Sprint.pdf][S:Plots PDF]]
+[[./2025/2025-Rd02-Chinese-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
+[[./2025/2025-Rd02-Chinese-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
+[[./2025/2025-Rd02-Chinese-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
+
 ** Rd01 Australian Grand Prix
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
