--- a/index.org
+++ b/index.org
@@ -29,6 +29,11 @@
 [[./2025/2025-Rd02-Chinese-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
 [[./2025/2025-Rd02-Chinese-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
 
+[[./2025/2025-Rd02-Chinese-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2025/2025-Rd02-Chinese-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2025/2025-Rd02-Chinese-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2025/2025-Rd02-Chinese-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+
 ** Rd01 Australian Grand Prix
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd01-Australian-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
