--- a/index.org
+++ b/index.org
@@ -11,6 +11,12 @@
 
 * 2025 Season
 
+** Rd03 Japanese Grand Prix
+
+[[./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
 ** Rd02 Chinese Grand Prix
 [[./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
