Add 2025 Rd06 Miami GP P1/SQ

--- a/index.org
+++ b/index.org
@@ -11,6 +11,16 @@
 
 * 2025 Season
 
+** Rd06 Miami Grand Prix
+
+[[./2025/2025-Rd06-Miami-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
+[[./2025/2025-Rd06-Miami-Grand-Prix-Sprint-Qualifying.pdf][SQ: Plot PDF]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Sprint-Qualifying_laptime.csv][SQ: laptime csv]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Sprint-Qualifying_rcm.csv][SQ: race control message csv]]
+
 ** Rd05 Saudi Arabian Grand Prix
 
 [[./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
