--- a/index.org
+++ b/index.org
@@ -21,6 +21,15 @@
 [[./2025/2025-Rd06-Miami-Grand-Prix-Sprint-Qualifying_laptime.csv][SQ: laptime csv]]
 [[./2025/2025-Rd06-Miami-Grand-Prix-Sprint-Qualifying_rcm.csv][SQ: race control message csv]]
 
+[[./2025/2025-Rd06-Miami-Grand-Prix-Sprint.pdf][S:Plots PDF]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
+
+[[./2025/2025-Rd06-Miami-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd06-Miami-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd05 Saudi Arabian Grand Prix
 
 [[./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
