--- a/index.org
+++ b/index.org
@@ -17,6 +17,10 @@
 [[./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
 [[./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
 
+[[./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Rd06 Miami Grand Prix
 
 [[./2025/2025-Rd06-Miami-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
