--- a/index.org
+++ b/index.org
@@ -12,6 +12,16 @@
 * 2025 Season
 
 
+** Rd10 Canadian Grand Prix
+
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Rd09 Spanish Grand Prix
 
 [[./2025/2025-Rd09-Spanish-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
