--- a/index.org
+++ b/index.org
@@ -22,6 +22,14 @@
 [[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd10-Canadian-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd09 Spanish Grand Prix
 
 [[./2025/2025-Rd09-Spanish-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
